--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,9 +3,9 @@ name: AndroidSceneform
 on: [push]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  my_job:
+    name: deploy to staging
+    runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
